--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 
-<img src="https://octodex.github.com/daftpunktocat-thomas" id="X-tocat" alt="X-tocat-gif" />
+<img src="https://octodex.github.com/daftpunktocat-thomas" id="daftpunk-tocat" alt="X-tocat-gif" />
 
 <!-- Change this code here by copy and pasting your template on line 15 -->
 <p>Hello World! I’m Vishram. This is my website!</p>
