--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 
-<img src="https://octodex.github.com/images/xtocat.gif" id="octocat" alt="octocat-gif" />
+<img src="https://octodex.github.com/images/nyantocat.gif" id="octocat" alt="octocat-gif" />
 
 <!-- Change this code here by copy and pasting your template on line 15 -->
 <p>Hello World! I’m Vishram. This is my website!</p>
