Major_change_to_webpage

--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
 
-<html>
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <title>my-first-website</title>
-  <LINK href="styles.css" rel="stylesheet" type="text/css">
-</head>
-
+---
+layout: jekyll-theme-time-machine
+---
 <body>
 
 <img src="https://octodex.github.com/images/xtocat.jpg" id="octocat" alt="octocat-gif" />
@@ -15,4 +10,3 @@
 <p>Hello World! I’m Vishram. This is my website! Needs to be updated</p>
 
 </body>
-</html>
