--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 
 ---
-layout: jekyll-theme-time-machine
+theme: jekyll-theme-time-machine
+title : Welcome to my homepage
+description : Will keep you posted!
 ---
 <body>
 
